# bike-statistic

./: .conf___TEMPLATE  .coveragerc  .env___TEMPLATE  .gitignore  manage.py  pyproject.toml  pytest.ini
project/: conftest.py
project/accounts/: urls.py  views.py
project/accounts/tests/: test_signup_form.py  test_signup_view.py  test_views.py
project/bikes/: __init__.py  admin.py  apps.py  context.py  factories.py  forms.py  models.py  signals.py  urls.py  views.py
project/bikes/helpers/: view_stats_helper.py
project/bikes/lib/: component_wear.py
project/bikes/migrations/: 0001_initial.py  0002_auto_20190108_1458.py  0002_auto_20191230_1624.py  0003_auto_20190121_1200.py  0003_auto_20191231_1421.py  0004_auto_20190228_1257.py  0004_bike_main.py  0005_bike_retired.py  0006_rename_componentstatistic_componentwear.py
project/bikes/templatetags/: buttons.py
project/bikes/tests/: test_component_wear.py  test_context.py  test_forms.py  test_helpers_view_stats.py  test_models.py  test_views.py  test_views_bikes.py  test_views_components.py  test_views_info.py  test_views_stats.py  test_views_wear.py
project/bikes/views/: bike.py  component.py  info.py  stats.py
project/config/: urls.py  wsgi.py
project/config/settings/: base.py  local.py  production.py  testing.py
project/core/: apps.py  context.py  converters.py  factories.py
project/core/helpers/: test_helpers.py
project/core/lib/: statistic.py  stats_goals.py  tests_utils.py  utils.py
project/core/mixins/: form_mixin.py  views.py
project/core/templates/: components.yaml
project/core/templatetags/: buttons.py  template_filters.py
project/core/tests/: test_context.py  test_stats_goals.py  test_template_filters.py  test_templatetags.py  test_utils.py
project/data/: admin.py  apps.py  cron.py  factories.py  forms.py  managers.py  models.py  urls.py  views.py
project/data/helpers/: view_data_helper.py
project/data/migrations/: 0001_initial.py  0002_data_user.py  0003_alter_data_date.py
project/data/templatetags/: get_index.py
project/data/tests/: test_forms.py  test_garmin_activity.py  test_insert_garmin.py  test_lib_chart.py  test_models.py  test_temperature.py  test_templatetags_get_index.py  (+4 more)
project/goals/: __init__.py  apps.py  context.py  factories.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
project/reports/: apps.py  cron.py  factories.py  forms.py  models.py  urls.py  views.py
project/templates/: 403.html  404.html  500.html  base.html  category_charts.html  category_data.html  category_goals.html  category_settings.html  category_wear.html
project/users/: apps.py  factories.py  forms.py  models.py  urls.py  views.py
requirements/: base.txt  develop.txt
sass/sass/: _alerts.scss  _buttons.scss  _forms.scss  _modal.scss  _navigation.scss  _reset.scss  _table.scss  _utilities.scss  base.scss
(+180 files in other folders)
