[project]
name = "bike-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "cryptography>=46.0.3",
    "django>=5.2.7",
    "django-bootstrap-datepicker-plus>=5.0.6",
    "django-bootstrap-datepicker-widget>=0.1",
    "django-bootstrap4>=25.2",
    "django-crequest>=2018.5.11",
    "django-crispy-forms>=2.4",
    "django-extensions>=4.1",
    "django-htmx>=1.26.0",
    "django-spaceless-templates>=1.0.2",
    "django-vanilla-views>=3.0.0",
    "django-widget-tweaks>=1.5.0",
    "garminconnect>=0.2.30",
    "mysqlclient>=2.2.7",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "slippers>=0.6.2",
]

production = [
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=5.1.0",
    "django-test-without-migrations>=0.6",
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.1.0",
    "pytest-diff>=0.1.14",
    "pytest-django>=4.11.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-forked>=1.6.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.0",
    "pytest-raises>=0.11",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "pytz>=2025.2",
    "ruff>=0.11.2",
    "time-machine>=2.16.0",
]

[tool.ruff.lint]
select = [
    "E",
    "N",
    "R",
    "I",
]
